--- a/reset.css
+++ b/reset.css
@@ -10,3 +10,9 @@
 html {
   scroll-behavior: smooth;
 }
+body {
+  line-height: 1.6;
+  font-family: "Poppins", sans-serif;
+  color: #333;
+  background-color: #fff;
+}
