--- a/components/navbar.css
+++ b/components/navbar.css
@@ -34,9 +34,8 @@
 }
 
 .nav-link:hover {
-  color: var(--primary-color);
+  color: var(--secondary-color);
 }
-
 .nav-link::after {
   content: "";
   position: absolute;
