--- a/reset.css
+++ b/reset.css
@@ -28,6 +28,7 @@ img {
 a {
   text-decoration: none;
   color: inherit;
+  scroll-behavior: smooth; /* Ensure smooth scrolling */
 }
 
 ul,
@@ -58,4 +59,20 @@ h6 {
   font-weight: 700;
   line-height: 1.2;
   font-family: "Poppins", sans-serif;
+}
+
+/* Scroll lock */
+html:has(#mobile-menu-toggle:checked),
+body:has(#mobile-menu-toggle:checked) {
+  overflow: hidden;
+  height: 100%;
+}
+
+/* Fix for Safari */
+@supports (-webkit-touch-callout: none) {
+  html:has(#mobile-menu-toggle:checked),
+  body:has(#mobile-menu-toggle:checked) {
+    position: fixed;
+    width: 100%;
+  }
 }
